# LearnCMake

./: README.md
docs/: 笔记.md
src/costom_compilation_option/: CMakeLists.txt
src/costom_compilation_option/math/: CMakeLists.txt
src/final_version/: CMakeLists.txt  config.h.in  main.cc
src/install_test/: CMakeLists.txt  main.cc
src/install_test/math/: CMakeLists.txt
src/multiple_files_multiple_dir/: CMakeLists.txt  main.cc
src/multiple_files_multiple_dir/math/: math_functions.cc  math_functions.h
src/multiple_files_single_dir/: CMakeLists.txt  main.cc
src/single_file/: CMakeLists.txt  main.cc
